--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "julia.environmentPath": "/run/media/madhav/DATA/git/learning-julia/SocEstimator"
+    "julia.environmentPath": "c:\\Users\\003GHU744\\Documents\\GitHub\\learning-julia\\skewcorrection"
 }
