--- a/skewcorrection/Project.toml
+++ b/skewcorrection/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 ImageBinarization = "cbc4b850-ae4b-5111-9e64-df94c024a13d"
