--- a/skewcorrection/Project.toml
+++ b/skewcorrection/Project.toml
@@ -7,5 +7,6 @@ ImageBinarization = "cbc4b850-ae4b-5111-9e64-df94c024a13d"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
