--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "julia.environmentPath": "c:\\Users\\003GHU744\\Documents\\GitHub\\learning-julia\\skewcorrection"
+    "julia.environmentPath": "c:\\Users\\003GHU744\\Documents\\GitHub\\learning-julia\\SocEstimator"
 }
