--- a/PizzaBot/Dockerfile
+++ b/PizzaBot/Dockerfile
@@ -8,6 +8,7 @@ RUN julia -e 'using Pkg; Pkg.add("Tables")'
 
 COPY pizza_bot.jl /home/
 COPY psql_backend.jl /home/
+COPY telegram.jl /home/
 WORKDIR /home/
 
 ENTRYPOINT julia pizza_bot.jl
