--- a/SocBot/docker-compose.yml
+++ b/SocBot/docker-compose.yml
@@ -4,13 +4,15 @@ services:
     build: .
     image: socbot-julia
     environment:
-    - DATABASE_URL="pgsql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/?sslmode=prefer"
     - TELEGRAM_KEY=${TELEGRAM_KEY}
+    - GMAPS_API_KEY=${GMAPS_API_KEY}
+    - DATABASE_URL="pgsql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/?sslmode=prefer"
     - POSTGRES_USER=${POSTGRES_USER}
     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     - POSTGRES_DB=${POSTGRES_DB}
     - USER_TABLE=${USER_TABLE}
-    - TRAVEL_TABLE=${TRAVEL_TABLE}
+    - TRIP_TABLE=${TRIP_TABLE}
+    - CAR_TABLE=${CAR_TABLE}
     depends_on:
       - db
     links:
@@ -29,7 +31,8 @@ services:
     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     - POSTGRES_DB=${POSTGRES_DB}
     - USER_TABLE=${USER_TABLE}
-    - TRAVEL_TABLE=${TRAVEL_TABLE}
+    - TRIP_TABLE=${TRIP_TABLE}
+    - CAR_TABLE=${CAR_TABLE}
     restart: on-failure
     networks:
     - soc_net
