--- a/SocBot_ORS/Dockerfile
+++ b/SocBot_ORS/Dockerfile
@@ -5,6 +5,8 @@ RUN julia -e 'using Pkg; Pkg.add("JSON")'
 RUN julia -e 'using Pkg; Pkg.add("LibPQ")'
 RUN julia -e 'using Pkg; Pkg.add("Tables")'
 RUN julia -e 'using Pkg; Pkg.add("Dates")'
+RUN julia -e 'using Pkg; Pkg.add("DataFrames")'
+RUN julia -e 'using Pkg; Pkg.add("Plots")'
 
 
 COPY soc_bot.jl /home/
