--- a/SocBot_ORS/Dockerfile
+++ b/SocBot_ORS/Dockerfile
@@ -12,6 +12,7 @@ RUN julia -e 'using Pkg; Pkg.add("Plots")'
 COPY soc_bot.jl /home/
 COPY psql_backend.jl /home/
 COPY telegram.jl /home/
+COPY ors.jl /home/
 WORKDIR /home/
 
 ENTRYPOINT julia soc_bot.jl
