--- a/SocBot_ORS/Project.toml
+++ b/SocBot_ORS/Project.toml
@@ -3,10 +3,14 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DotEnv = "4dc1fcf4-5e3b-5448-94ab-0c38ec0385c1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
+Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
+OpenStreetMapX = "86cd37e6-c0ff-550b-95fe-21d72c8d4fc9"
+OpenStreetMapXPlot = "d3d4fdd0-c191-11e8-3358-a3629b56487d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
